--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,9 @@
 pandas==1.3.5
-numpy==1.21.6
 nltk==3.7
-sklearn-pandas==1.8.0
-seaborn==0.11.2
-matplotlib==3.2.2
-sklearn-pandas==1.8.0
-plotly==5.5.0
-xgboost==0.90
-lightgbm==2.2.3
-hyperopt==0.1.2
-pywedge==0.5.1.8
-requests==2.23.0
-pandas-profiling==1.4.1
-spacy==3.4.4
-textblob==0.15.3
-tensorflow==2.9.2
 afinn==0.1
-streamlit
+sklearn-pandas==1.8.0
+scipy==1.7.3
+spacy==3.4.4
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.1/en_core_web_sm-3.4.1-py3-none-any.whl
+regex==2022.6.2
+requests==2.25.1
